--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   },
   "homepage": "https://github.com/WildCodeSchool/Express-Quests#readme",
   "dependencies": {
+    "argon2": "^0.31.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.6.0"
   },
   "devDependencies": {
